# FluidFrame

./: .gitignore  README.md  app.py  app_robyn.py  build.py  config.py  default_tailwind_config.js  fluidbuild.py  fluidframe_cli.py  htmx_test.py  markdown_test.py  package-lock.json  package.json  purgecss.py  pyproject.toml  setup.py  tailwind.config.js  test.py
fluidframe/: README.md  Thoughts.md  __init__.py  base.py  base_app.py  cli.py  config.py  node_modules.py  package-lock.json  package.json  public.py  tags.py  utils.py
fluidframe/components/: action_components.py  base_components.py  buttons.py  cards.py  input_components.py  layout_components.py  multimedia_components.py  statefull_components.py  text_components.py  texts.py  view_components.py
fluidframe/components/statefull/: action_components.py  input_components.py  layout_components.py
fluidframe/components/stateless/: layout_components.py  multimedia_components.py  text_components.py  utils.py
fluidframe/components/stateless_components.py/: components.py  layout_components.py  view_components.py
fluidframe/components/utils/: __init__.py
fluidframe/core/: __init__.py  component.py  components.py  dependency.py  fluidframe.py  package_manager.py  state.py  stylings.py  wrappers.py
fluidframe/core/tags/: auto_pyi.py  imp.pyx  imp1.pyx  imp2.pyx  imp3.pyx  tags.c  tags.pyi  tags.pyx  tags_base.py
fluidframe/public/: 404.html
fluidframe/public/scripts/: dependency_manager.js  fluidframe.bundle.js  hot_reload.js  htmx.bundle.js  state_manager.js  tooltip.js
fluidframe/public/scripts/fluidframe/: dependency_manager.js  state_manager.js
fluidframe/public/scripts/prismjs/: prism-bash.bundle.js  prism-cpp.bundle.js  prism-csharp.bundle.js  prism-css.bundle.js  prism-dart.bundle.js  prism-go.bundle.js  prism-haskell.bundle.js  prism-java.bundle.js  prism-javascript.bundle.js  prism-lua.bundle.js  (+21 more)
fluidframe/static/: copy_code.js  dependency_manager.js  highlight_code.js  hot_reload.js  tooltip.js
fluidframe/styling/: base_stylings.py  bootstrap.py  tailwind.py  uikit.py
fluidframe/templates/: index.html  more_content.html  root.html  view_components.html
fluidframe/utilities/: __init__.py  boilerplate.py  helper.py  node_utils.py  package-lock.json  package.json  package_bundling.py  package_manager.py  rollup.config.js  script.py  tailwind_utils.py  utils.py
fluidframe/utilities/tags/: __init__.py  tags.c  tags.html  tags.pyx  tags_base.py
fluidframe/utilities/tooltip/: script.js  style.css
fluidpack/: package-lock.json  package.json
tests/: app_robyn.py  index.html  tag_benchmark.py  test.py
(+2 files in other folders)
