[tool.poetry]
name = "fluidframe"
version = "0.1.0"
description = ""
authors = ["AswanthManoj <aswanthmanoj51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.38.1"
jinja2 = "^3.1.4"
uvicorn = "^0.30.3"
markdown2 = {extras = ["all"], version = "^2.5.0"}
markdown-it-py = {extras = ["plugins"], version = "^3.0.0"}
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
cython = "^3.0.10"
setuptools = "^72.1.0"
nodeenv = "^1.9.1"


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"