[tool.poetry]
name = "fluidframe"
version = "0.1.0"
description = "FluidFrame is a powerful, pythonic web application framework that embraces the simplicity and capability of hypermedia concepts. It combines Python's elegance with HTMX's innovative approach to create dynamic, interactive web applications without the need for complex JavaScript."
authors = ["AswanthManoj <aswanthmanoj51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.38.1"
jinja2 = "^3.1.4"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
cython = "^3.0.10"
setuptools = "^72.1.0"
nodeenv = "^1.9.1"


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"